ota: read password and IP from environment

--- a/esp8266/platformio.ini
+++ b/esp8266/platformio.ini
@@ -46,5 +46,5 @@ board_flash_mode = dout
 lib_deps = ${common.lib_deps}
 build_flags = ${common.build_flags}
 upload_speed = 115200
-upload_port = "sonoffsc.local"
-upload_flags = --auth=Algernon1 --port 8266
+upload_port = "${sysenv.ESPURNA_IP}"
+upload_flags = --auth="${sysenv.ESPURNA_AUTH}"
